Add first integration test
Fixes #36

This is the first test to establish the testing framework: a script in
ran before the tests to ensure that the SDK 0.12.16 is installed and run
a sandbox with testing packages.

The LedgerIdentityClient is tested as a proof of concept before applying
this approach to other clients.

gRPC reflection service is also introduced for future use (feature
discovery to target multiple versions of the ledger).

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 *.iml
 node_modules
 src/generated
+test/generated
 proto
 docs
 lib
+sandbox.port
+test/integration/src/sandbox.err
+test/integration/src/sandbox.out
+test/integration/src/sandbox.log
+test/integration/src/.package-database
+test/integration/src/daml/*.hi
+test/integration/src/daml/*.hie
+test/integration/src/dist
