--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package.json"
   ],
   "scripts": {
-    "ci-pipeline": "npm ci && ./check-copy.sh && npm run pretest && npm run test-with-fixed-seed",
+    "ci-pipeline": "npm ci && ./check-copy.sh && rm -rf proto src/generated && npm run pretest && npm run test-with-fixed-seed",
     "release-docs": "rm -rf docs && typedoc --tsconfig tsconfig-docs.json --out ./docs/$(git describe --tags) src",
     "prepack": "./grpc-codegen.sh && tsc --build tsconfig-dist.json && cp -r src/generated lib",
     "pretest": "./grpc-codegen.sh && tsc --build tsconfig-dist.json && tsc --build tsconfig-test.json",
