--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "protobufjs": "6.8.8",
     "sinon": "7.3.1",
     "ts-node": "8.0.3",
+    "tslint-config-standard": "8.0.1",
     "typedoc": "0.14.2",
     "typescript": "3.4.3",
     "uuid": "3.3.2"
