--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,6 @@ trigger:
     include:
       - master
 
-
 # Enable PR triggers that target the master branch
 pr:
   autoCancel: true # cancel previous builds on push
@@ -29,7 +28,9 @@ strategy:
       daml_sdk_version: 0.12.16
 
 steps:
-- script: curl -sSL https://get.daml.com/ | sh && "$HOME"/.daml/bin/daml install $(daml_sdk_version)
+- script: curl -sSL https://get.daml.com/ | sh
+  displayName: Get DAML SDK installer
+- script: ~/.daml/bin/daml install $(daml_sdk_version)
   displayName: Install DAML SDK $(daml_sdk_version)
 - task: NodeTool@0
   displayName: Install Node.js $(nodejs_version)
