--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,3 +38,8 @@ steps:
     versionSpec: $(nodejs_version)
 - script: npm run ci-pipeline
   displayName: Build and test
+- bash: bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) ci-build digitalasset_ex-daml-js master --logging.level.com.synopsys.integration=DEBUG
+    displayName: 'Blackduck Scan'
+    env:
+      BLACKDUCK_HUB_CREDENTIALS: $(BLACKDUCK_HUB_CREDENTIALS)
+
