Fix bug client test (#89)
* Fix LedgerClient to expose package

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Add test for client

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Add dummy server test

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Add integration test for upload dar

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Update test/integration/src/uploadDar/daml.yaml

Co-Authored-By: Stefano Baghino <43749967+stefanobaghino-da@users.noreply.github.com>

* Update test/integration/src/daml.yaml

Co-Authored-By: Stefano Baghino <43749967+stefanobaghino-da@users.noreply.github.com>

* Upgrade SDK to version 0.13.10

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Fix integration test

To reflect latest changes.

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Fix to ensure that listpackage response won't fail

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Update azure pipeline

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Update azure-pipelines.yml

Co-Authored-By: Stefano Baghino <43749967+stefanobaghino-da@users.noreply.github.com>

* Update azure-pipelines.yml

Co-Authored-By: Stefano Baghino <43749967+stefanobaghino-da@users.noreply.github.com>

--- a/test/integration/src/uploadDar/daml.yaml
+++ b/test/integration/src/uploadDar/daml.yaml
@@ -1,11 +1,11 @@
 sdk-version: 0.13.10
-name: IntegrationTests
-source: daml/IntegrationTests.daml
+name: UploadDarIntegrationTests
+source: daml/Main.daml
 parties:
   - Alice
   - Bob
 exposed-modules:
-  - IntegrationTests
+  - CreateToken
 version: '0.0.0'
 dependencies:
   - daml-prim
