Upgrade NPM packages to support NodeJS 12
This updates all our NPM dependencies which lets us support NodeJS 12.

This isn’t quite everything we have to do. We still have to switch
from `grpc` to `grpc-js` since the former will go out of support early
next year but they claim to be mostly API compatible so hopefully that
will be smooth.

The only code changes are in the tests, so hopefully I managed to not
break too many things.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,9 @@ strategy:
     node_10_daml_1.0.0:
       nodejs_version: 10.x
       daml_sdk_version: 1.0.0
+    node_12_daml_1.0.0:
+      nodejs_version: 12.x
+      daml_sdk_version: 1.0.0
 
 steps:
 - script: curl -sSL https://get.daml.com/ | sh -s $(daml_sdk_version)
