--- a/package.json
+++ b/package.json
@@ -44,29 +44,29 @@
   },
   "homepage": "https://github.com/digital-asset/daml-js#readme",
   "dependencies": {
-    "google-protobuf": "3.7.1",
-    "grpc": "1.18.0"
+    "google-protobuf": "^3.12.4",
+    "grpc": "^1.24.3"
   },
   "engines": {
-    "node": ">=10.0.0 <11.0.0"
+    "node": ">=10.0.0 <13.0.0"
   },
   "devDependencies": {
-    "@types/chai": "4.1.7",
-    "@types/google-protobuf": "3.2.7",
-    "@types/mocha": "5.2.6",
-    "@types/node": "10.14.4",
-    "@types/sinon": "7.0.11",
-    "@types/uuid": "3.4.4",
-    "chai": "4.2.0",
-    "grpc-tools": "1.7.3",
-    "grpc_tools_node_protoc_ts": "2.5.0",
-    "jsverify": "0.8.4",
-    "mocha": "6.1.4",
-    "protobufjs": "6.8.8",
-    "sinon": "7.3.1",
-    "ts-node": "8.0.3",
-    "typedoc": "0.15.0",
-    "typescript": "3.4.3",
-    "uuid": "3.3.2"
+    "@types/chai": "^4.2.12",
+    "@types/google-protobuf": "^3.7.2",
+    "@types/mocha": "^8.0.1",
+    "@types/node": "~12.0.12",
+    "@types/sinon": "^9.0.4",
+    "@types/uuid": "^8.0.1",
+    "chai": "^4.2.0",
+    "grpc-tools": "^1.9.1",
+    "grpc_tools_node_protoc_ts": "^4.1.2",
+    "jsverify": "^0.8.4",
+    "mocha": "^8.1.1",
+    "protobufjs": "^6.10.1",
+    "sinon": "^9.0.2",
+    "ts-node": "^8.10.2",
+    "typedoc": "^0.17.8",
+    "typescript": "^3.9.7",
+    "uuid": "^8.3.0"
   }
 }
