--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "homepage": "https://github.com/digital-asset/daml-js#readme",
   "dependencies": {
     "google-protobuf": "^3.12.4",
-    "grpc": "^1.24.3"
+    "@grpc/grpc-js": "^1.1.3"
   },
   "engines": {
     "node": ">=10.0.0 <13.0.0"
