--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [ "es2015" ],
+    "target": "es6",
+    "module": "commonjs",
     "incremental": true,
     "strict": true,
     "noUnusedLocals": true,
