--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   },
   "homepage": "https://github.com/digital-asset/daml-js#readme",
   "dependencies": {
-    "google-protobuf": "^3.12.4",
-    "@grpc/grpc-js": "^1.1.3"
+    "@grpc/grpc-js": "^1.3.0",
+    "google-protobuf": "^3.12.4"
   },
   "engines": {
     "node": ">=10.0.0 <15.0.0"
@@ -59,7 +59,7 @@
     "@types/uuid": "^8.0.1",
     "chai": "^4.2.0",
     "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.2",
+    "grpc_tools_node_protoc_ts": "^5.2.2",
     "jsverify": "^0.8.4",
     "mocha": "^8.1.1",
     "protobufjs": "^6.10.1",
